Fix vertical alignment of club names

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body{
     background:radial-gradient(farthest-corner at 100px 0px,white 0%,#a6cfc1 80%, #a6cfc1 100%);
     height: 94px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.35), 0 2px 5px 0 rgba(0, 0, 0, 0.33);
-    padding:0px;
+    padding:0px;    
 }
 #club1-container {
     z-index: 3;
@@ -85,7 +85,7 @@ body{
 .clubName {            
     font-size: 16px;
     height:34px;         
-    /*display: flex;*/
+    display: flex;
     align-items:center;
     justify-content:center;            
 }      
